--- a/docs.html
+++ b/docs.html
@@ -253,9 +253,10 @@
             <tr>
               <td>#10</td>
               <td>coming soon</td>
+	      alt="10.1101/237669"></a></td>
               <td><b>A Parallel Processing Model of Drosophila Olfactory
-              Sensory Neurons</b>, A.A. Lazar, Chung-Heng Yeh</td>
-              <td>pending</td>
+              Sensory Neurons and Its Biological Validation</b>, A.A. Lazar, Chung-Heng Yeh</td>
+              <td>ACTIVE</td>
               <td>
                     <img style="position:absolute;  width:25px; height:25px;" src="img/github_purple.png">
               </td>
@@ -367,6 +368,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></sc
   </body>
 </html>
